--- a/mailmap.cabal
+++ b/mailmap.cabal
@@ -51,20 +51,24 @@ extra-doc-files:    CHANGELOG.md
 -- Extra source files to be distributed with the package, such as examples, or a tutorial module.
 -- extra-source-files:
 
-common warnings
-    ghc-options: -Wall -Werror
+common common
+  ghc-options: -Wall -Werror
+  default-language: GHC2021
+  default-extensions: StandaloneDeriving, DerivingStrategies, TypeFamilies
 
 library
-  hs-source-dirs: src
-  exposed-modules: Mailmap
+  import: common
+  hs-source-dirs:   src
+  exposed-modules:  Mailmap
   build-depends:    base >= 4.17.2.1
                   , text
                   , containers
                   , parsec
+                  , prettyprinter
 
 executable mailmap
     -- Import common warning flags.
-    import:           warnings
+    import:           common
 
     -- .hs or .lhs file containing the Main module.
     main-is:          Main.hs
